--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,7 @@
     <title>Мои фотографии</title>
 </head>
 <body>
-    <img src="/cv/photo.jpg" alt="фото со шлемом">
+    <img src="/photo.jpg" alt="фото со шлемом">
     <p>Посмотреть мои фото на разных ресурсах</p>
     <ul>
         <li> <a target="_blank" href="https://www.instagram.com/a_kavardak/?hl=ru">Instagram</a></li>
