--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       <tr>
           <td><img src="https://sun9-9.userapi.com/s/v1/ig2/MMdvmWVB-gGc57QJcEaCalumZG3e58gcCPWdL53nI_rCwR3QM827wLDeguKrhsSXw3dm5bCYa4p_UvSC6vZuhlZe.jpg?size=400x400&quality=96&crop=234,481,241,241&ava=1" alt="тут фотка Антония в зеркале мопеда" width="200"></td>
           <td><h1>Антон Кавардаков</h1>
-            <P>Меня зовут Антоний и я сел учить<em><strong> Html</strong> </em>  </P>
-            <p>Я живу на улице Льва, люблю кофеечек и Ольгу Андревну</p></td>
+            <P>Меня зовут Антоy и я пишу свой первый сайт<em><strong> (ура!)</strong> </em>  </P>
+            <p>Я живу на улице Толстого Льва, люблю кофеечек и Оленьку и покушоц</p></td>
       </tr> 
     
 </table>
